[project]
name = "toppath"
authors = [{ name = "Lix Xu", email = "xuzenglin@gmail.com" }]
description = "a package on top of pathlib and path to use path easily"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["path", "toppath", "pathlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = ["path"]
dynamic = ["version"]
[tool.setuptools.dynamic]
version = { attr = "toppath.__version__" }

[project.urls]
"Homepage" = "https://github.com/lixxu/toppath"
"Bug Tracker" = "https://github.com/lixxu/toppath/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
